# cookiecutter-SciCompCookieCutter

./: cookiecutter.json
{{cookiecutter.directory_name}}/: README.md  pyproject.toml
