[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "{{ cookiecutter.package_name }}" 
version = "0.0.1"
authors = [
  { name="{{ cookiecutter.author }}", email="{{ cookiecutter.email }}"},
]
description="{{ cookiecutter.description }}"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]